fix(home): fixed home must read message too long issue

--- a/modules/core/client/less/home.less
+++ b/modules/core/client/less/home.less
@@ -562,7 +562,7 @@
         background-color: #fff;
         opacity: 0.8 !important;
         width: 80%;
-        top: 20%;
+        top: 10%;
         border-radius: 4px;
         h4,
         .h4 {
@@ -570,6 +570,8 @@
         }
         .msg-content {
             font-size: 16px;
+            max-height: 300px;
+            overflow-y: auto;
         }
         .checkbox {
             font-size: 16px;
